chore: add swagger doc about exists api
